Migrated to crypto 1.0.2